# onyx

./: .gitignore  README.md
Prism/AUTOML/: Anomaly_Models.py  Basic_Preprocessing.py  DataCleaning.py  Dataread.py  Forecasting_Models.py  TimeSeries_Preprocessing.py
Prism/DataConnectors/clickhouse/: .env.example  .gitignore  README.md  __init__.py  config.py  connector.py  exceptions.py  requirements.txt  test_db.py  utils.py
Prism/DataConnectors/mongodb/: .env.example  .gitignore  README.md  __init__.py  async_connector.py  async_test.py  config.py  exceptions.py  requirements.txt  utils.py
Prism/DataConnectors/mysql/: .env.example  .gitignore  README.md  __init__.py  async_connector.py  async_test.py  config.py  exceptions.py  requirements.txt  utils.py
Prism/DataConnectors/postgresql/: .env.example  .gitignore  README.md  __init__.py  async_connector.py  async_test.py  config.py  exceptions.py  requirements.txt  utils.py
Prism/kpi_engine/: kpi_registry.json  mock_schema.json  pyproject.toml  readme.md  requirements.txt  server.py
Prism/kpi_engine/api/: kpi.py
Prism/kpi_engine/controllers/: kpi_controller.py
Prism/kpi_engine/repositories/: kpi_repository.py
Prism/kpi_engine/schemas/: kpi.py
Prism/kpi_engine/services/: auth_service.py
Prism/kpi_engine/utils/: schema_mock.py  validate_formula.py
prism-web/prism-backend/: conversationa_business_intelligence.py  database.py  executed_sql_results.json  insert_data_into_vdb.py  kpi.py  kpi_registry.json  main.py  models.py  schema_extraction.json  schema_extraction.py  schemas.py  semantic_database_description.json  semantic_extraction.py  tables_extractor.py  visualizations.py
prism-web/prism-backend/working copy/: conversationa_business_intelligence.py
prism-web/prism-frontend/agile-react-wind/src/: App.tsx
prism-web/prism-frontend/agile-react-wind/src/components/: AppSidebar.tsx  Chatbot.tsx  ConnectDatabase.tsx  KPI.tsx  SignIn.tsx  Visualizations.tsx
pulse/DataSync/S3Bucket/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
pulse/DataSync/S3Bucket/api/: __init__.py  routes.py
pulse/DataSync/S3Bucket/config/: settings.py
pulse/DataSync/S3Bucket/controllers/: sync_controller.py
pulse/DataSync/S3Bucket/lambda/: s3_lambda_handler.py
pulse/DataSync/S3Bucket/models/: s3_models.py
pulse/DataSync/S3Bucket/services/: file_service.py  s3_sync_service.py
pulse/DataSync/S3Bucket/utils/: file_utils.py  logger.py
pulse/DataUpload/S3Bucket/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  server.py
pulse/DataUpload/S3Bucket/api/: __init__.py  routes.py
pulse/DataUpload/S3Bucket/config/: settings.py
pulse/DataUpload/S3Bucket/controllers/: __init__.py  upload_controller.py
pulse/DataUpload/S3Bucket/models/: __init__.py  upload_models.py
pulse/DataUpload/S3Bucket/services/: s3_upload_service.py
pulse/DataUpload/S3Bucket/utils/: logger.py  validators.py
pulse/dialouge_management/: environment.py  pyproject.toml  server.py
pulse/dialouge_management/agents/: a.txt
pulse/dialouge_management/api/: ai_role_management.py  session_management.py
pulse/dialouge_management/controllers/: role_controller.py  session_management.py
pulse/dialouge_management/models/: a.txt
pulse/dialouge_management/prompts/: a.txt
pulse/dialouge_management/schemas/: request.py
pulse/dialouge_management/services/: a.txt  mongo_service.py  redis_service.py
pulse/dialouge_management/tools/: a.txt
pulse/dialouge_management/utils/: a.txt
pulse/document_parsing/: pyproject.toml
pulse/file-parser/: .env.example  .gitignore  Makefile  README.md  environment.py  pyproject.toml  requirements.txt  server.py
pulse/file-parser/api/: __init__.py  parse_routes.py
pulse/file-parser/controllers/: __init__.py  parse_controller.py
pulse/file-parser/models/: __init__.py  parse_models.py
pulse/file-parser/schemas/: __init__.py  parse_schemas.py
pulse/file-parser/services/: __init__.py  base_parser.py  docling_service.py  llamaparse_service.py
pulse/file-parser/tests/: __init__.py  conftest.py  test_api.py  test_services.py
pulse/file-parser/tools/: __init__.py  output_writer.py
pulse/file-parser/utils/: __init__.py  constants.py  file_validator.py  logging_config.py  output_writer.py
pulse/indexer/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
pulse/indexer/api/: __init__.py  collections.py  files.py  indexing.py  search.py
pulse/indexer/controllers/: __init__.py  bulk_indexing_controller.py  collections_controller.py  files_controller.py  indexing_controller.py  retriever_controller.py
pulse/indexer/models/: requests.py  responses.py
pulse/indexer/parsed_data_text/: .gitkeep
pulse/indexer/services/: config.py  indexing_service.py  qdrant_service.py  retriever_service.py
pulse/session_handling/: environment.py  pyproject.toml
pulse/session_handling/controllers/: a.txt
pulse/session_handling/models/: session.py
pulse/skeleton/: pyproject.toml  server.py
pulse/skeleton/api/: a.txt
pulse/skeleton/schemas/: a.txt
tests/: __init__.py
