[tool.poetry]
name = "kpi_engine"
version = "0.1.0"
description = "KPI Engine for registering and managing KPIs"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.110.0"
pydantic = "^2.0.0"
sqlparse = "^0.4.4"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



