[tool.poetry]
name = "indexing-qdrant"
version = "0.1.0"
description = ""
authors = ["your name <email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
llama-index = "^0.12.7"
llama-index-vector-stores-qdrant = "^0.6.0"
qdrant-client = "^1.7.0"
openai = "^1.30.0"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
