[tool.poetry]
name = "s3-sync-service"
version = "1.0.0"
description = "Optimized S3 file synchronization service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = ".", from = "."}]

[tool.poetry.dependencies]
python = "^3.8.1"
boto3 = "1.34.0"
botocore = "1.34.0"
fastapi = "0.110.0"
uvicorn = "0.27.0"
pydantic = "2.6.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "server:main"
