[tool.poetry]
name = "onyx-pulse-s3bucket"
version = "1.0.0"
description = "Optimized S3 file upload service"
authors = ["Deva Macha <deva.macha@gytworkz.com>"]
readme = "README.md"
packages = [{include = "onyx_pulse_s3bucket", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
# AWS SDK for Python
boto3 = "^1.34.0"
botocore = "^1.34.0"
# Environment variables
python-dotenv = "^1.0.0"
# FastAPI and dependencies
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.7"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
